Implementación de servicio
-Búsqueda de issues desde API de Github

--- a/src/app/components/bug-card/bug-card.component.html
+++ b/src/app/components/bug-card/bug-card.component.html
@@ -1,4 +1,3 @@
 <div class="bug-card">
-    <p>Bug: {{issue.title}}</p>
-    <span>Description: {{issue.description}}</span>
+    <p>{{issue.title}}</p>
 </div>
