--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
-.container{
-    background-color: #AAA;
-    position: relative;
+app-bug-searcher{
+    padding: 50px;
+    display: block;
 }
 
+.container{
+    position: relative;
+    display: inline-block;
+    border-radius: 20px;
+    background-color: #FFF;
+    left:25%;
+    width: 50%;
+}
+
+@media (max-width:60em){
+    .container{
+        left:0%;
+        width:100%;
+    }
+}
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgb(249, 249, 249);
 }
