--- a/src/app/components/bug-card/bug-card.component.css
+++ b/src/app/components/bug-card/bug-card.component.css
@@ -2,6 +2,6 @@
     position: relative;
     background-color: rgb(241, 255, 253);
     border: solid 5px rgb(175, 217, 255);
-    padding: 5px;
+    padding: 0px 5px;
     margin: 15px 0px;
 }
