--- a/src/app/components/bug-searcher/bug-searcher.component.html
+++ b/src/app/components/bug-searcher/bug-searcher.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div>
-        <input (keyup)="onSearch(searchText.value)" type="search" placeholder="Search" #searchText>
+        <input class="search-bar" (keyup)="onSearch(searchText.value)" type="search" placeholder="Search" #searchText>
     </div>
 
     <div *ngIf="foundIssues && foundIssues.length">
