--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
-app-bug-searcher{
+
+app-bug-searcher {
     padding: 50px;
     display: block;
 }
 
-.container{
+.search-bar {
+    width: 100%;
+    position: relative;
+    display: block;
+    margin: 10px 0px;
+    padding: 10px 5px;
+    background-color: rgb(239, 239, 239);
+    border: solid 5px rgb(230, 230, 230);
+    font-size: 16px;
+    color: rgb(144, 144, 144);
+    font-weight: bold;
+}
+.search-bar:focus {
+    background-color: #FFF;
+    color: #000;
+    outline: 0px;
+}
+
+.container {
     position: relative;
     display: inline-block;
     border-radius: 20px;
     background-color: #FFF;
-    left:10%;
+    left: 10%;
     width: 80%;
 }
 
-@media (max-width:60em){
-    .container{
-        left:0%;
-        width:100%;
+@media (max-width:60em) {
+    .container {
+        left: 0%;
+        width: 100%;
     }
 }
-body{
+
+body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(249, 249, 249);
 }
