Funcionalidad de búsqueda con autocomplete

--- a/src/app/autocomplete-searchbar/autocomplete-searchbar.component.html
+++ b/src/app/autocomplete-searchbar/autocomplete-searchbar.component.html
@@ -1,1 +1,1 @@
-<input class="search-bar" (keyup)="keyUp(searchbox)" type="search" placeholder="Search" #searchbox>
+<input id="autocomplete-searchbar" class="search-bar" type="search" placeholder="Search" #searchbox>
