--- a/src/app/components/bug-card/bug-card.component.html
+++ b/src/app/components/bug-card/bug-card.component.html
@@ -1,3 +1,3 @@
-<div class="bug-card">
-    <p>{{issue.title}}</p>
-</div>
+<a href="{{issue.html_url}}" class="bug-card">
+    {{issue.title}}
+</a>
