--- a/src/app/components/bug-searcher/bug-searcher.component.html
+++ b/src/app/components/bug-searcher/bug-searcher.component.html
@@ -1,13 +1,13 @@
-<div class="card">
-    <div id="searchbar">
+<form class="card">
+    <div>
         <app-autocomplete-searchbar (searchText)="onSearch($event)"></app-autocomplete-searchbar>
     </div>
 
-    <form id="main-form" *ngIf="foundIssues && foundIssues.length">
-        <app-bug-card role="button" *ngFor="let foundIssue of foundIssues; let i=index;" tabindex="i"
-            (click)="onClick(foundIssue.html_url)" [issue]="foundIssue"></app-bug-card>
-    </form>
+    <div *ngIf="foundIssues && foundIssues.length">
+        <app-bug-card *ngFor="let foundIssue of foundIssues;"
+            [issue]="foundIssue"></app-bug-card>
+    </div>
     <div *ngIf="!foundIssues || !foundIssues.length">
         <p>{{screenMessage}}</p>
     </div>
-</div>
+</form>
